Fixed card button alignment

--- a/src/app/components/project-list/project/project.component.scss
+++ b/src/app/components/project-list/project/project.component.scss
@@ -75,9 +75,9 @@
         flex-wrap: wrap;
         justify-content: flex-start;
       }
-      li {
+      .tech-item {
         list-style: none;
-        padding: 15px 15px 0 0;
+        padding: 15px 10px;
         font-size: 14px;
       }
 
@@ -92,6 +92,7 @@
         li {
           list-style: none;
           width: 100%;
+          padding: 10px 0;
           &:last-child{
             padding-bottom: 0;
           }
